@startuml
'https://plantuml.com/class-diagram

class CarRepository {

  + getFromDb(final String carId): Car
}

class CarFormatter {
  + getCarsNames(List<Car> cars): String
}

class Car {
  - final String _id
  - final String _model
  - final String _brand
  + Car(String id, String model, String brand)
  + getId(): String
  + getModel(): String
  + getBrand(): String
}

CarRepository "1" -- "*" Car : contains
CarFormatter --> Car : uses
@enduml